commit translated contents

--- a/articles/containers/index.yml
+++ b/articles/containers/index.yml
@@ -63,7 +63,7 @@ sections:
           - html: <a href="/azure/app-service/containers/tutorial-multi-container-app">Een app met meerdere containers bouwen in Web App for Containers</a>
           - html: <a href="/azure/container-registry/container-registry-tutorial-quick-task">Containerinstallatiekopieën bouwen met Azure Container Registry-taken</a>
           - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Een container bouwen en implementeren in Azure Container Instances</a>
-          - html: <a href="/azure/openshift/tutorial-create-cluster">Een Red Hat OpenShift-cluster maken in Azure</a>
+          - html: <a href="/azure/openshift/tutorial-create-cluster">Een Azure Red Hat OpenShift-cluster maken</a>
   - title: Uw vaardigheden ontwikkelen met Microsoft Learn
     items:
       - type: list
