commit translated contents

--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -16,32 +16,68 @@
       href: setup-create-workspace.md
 - name: Snelstartgidsen
   items:
-    - name: Experimenteren met een cloudnotebook
-      displayName: workspace
-      href: quickstart-run-cloud-notebook.md
-    - name: Experimenteren met een lokale notebook
-      displayName: 'workspace, install, sdk'
-      href: quickstart-run-local-notebook.md
+    - name: Python-SDK
+      items:
+        - name: Experiment in de cloud uitvoeren
+          displayName: workspace
+          href: quickstart-run-cloud-notebook.md
+        - name: Experiment lokaal uitvoeren
+          displayName: 'workspace, install, sdk'
+          href: quickstart-run-local-notebook.md
+    - name: Visuele interface
+      items:
+        - name: Gegevens voorbereiden en visualiseren
+          displayName: experiment drag-and-drop
+          href: ui-quickstart-run-experiment.md
 - name: Zelfstudies
   items:
-    - name: Afbeeldingsclassificatie (MNIST-gegevens)
+    - name: Python-SDK
       items:
-        - name: 1. Een model trainen
-          displayName: build modeling
-          href: tutorial-train-models-with-aml.md
-        - name: 2. Een model implementeren
-          href: tutorial-deploy-models-with-aml.md
-    - name: Regressie (gegevens over taxi's NYC)
+        - name: Afbeeldingsclassificatie (MNIST-gegevens)
+          items:
+            - name: 1. Een model trainen
+              displayName: build modeling
+              href: tutorial-train-models-with-aml.md
+            - name: 2. Een model implementeren
+              href: tutorial-deploy-models-with-aml.md
+        - name: Regressie (gegevens over taxi's NYC)
+          items:
+            - name: 1. Gegevens voorbereiden voor modellering
+              displayName: data prep
+              href: tutorial-data-prep.md
+            - name: 2. Een ML-model automatisch trainen
+              displayName: 'automl, automated, auto ml,'
+              href: tutorial-auto-train-models.md
+    - name: Visuele interface
       items:
-        - name: 1. Gegevens voorbereiden voor modellering
-          displayName: data prep
-          href: tutorial-data-prep.md
-        - name: 2. Een ML-model automatisch trainen
-          displayName: 'automl, automated, auto ml,'
-          href: tutorial-auto-train-models.md
+        - name: Regressiemodel trainen
+          displayName: experiment drag-and-drop visual interface Tutorial 1
+          href: ui-tutorial-automobile-price-train-score.md
+        - name: Regressiemodel implementeren
+          displayName: experiment drag-and-drop visual interface Tutorial 2
+          href: ui-tutorial-automobile-price-deploy.md
 - name: Voorbeelden
-  displayName: 'example, examples, Jupyter, azure notebooks, python, notebook, GitHub'
-  href: samples-notebooks.md
+  items:
+    - name: Notebooks
+      displayName: 'example, examples, jupyter, azure notebooks, python, notebook, github'
+      href: samples-notebooks.md
+    - name: Experimenten met visuele interface
+      items:
+        - name: Prijs voorspellen
+          displayName: 'Sample 1, training, regression'
+          href: ui-sample-regression-predict-automobile-price-basic.md
+        - name: Prijs voorspellen (geavanceerd)
+          displayName: 'Sample 2, training, regression'
+          href: ui-sample-regression-predict-automobile-price-compare-algorithms.md
+        - name: Kredietrisico voorspellen
+          displayName: 'Sample 3, training, classification'
+          href: ui-sample-classification-predict-credit-risk-basic.md
+        - name: Kredietrisico voorspellen (geavanceerd)
+          displayName: 'Sample 4, training, classification'
+          href: ui-sample-classification-predict-credit-risk-cost-sensitive.md
+        - name: Verloop voorspellen
+          displayName: 'Sample 5, training, CRM, classification'
+          href: ui-sample-classification-predict-churn.md
 - name: Concepten
   items:
     - name: De werking van de service
@@ -50,14 +86,16 @@
     - name: Geautomatiseerde Machine Learning
       displayName: 'automl, auto ml'
       href: concept-automated-ml.md
-    - name: Modelbeheer
-      displayName: 'deploy, deployment'
+    - name: Modelbeheer (MLOps)
+      displayName: 'deploy, deployment, mlops, operationalize, operationalization'
       href: concept-model-management-and-deployment.md
     - name: Interpreteerbaarheid van modellen
       displayName: explainability
       href: machine-learning-interpretability-explainability.md
     - name: Versnellen met FPGA's
       href: concept-accelerate-with-fpgas.md
+    - name: Optimaliseren met ONNX en ONNX Runtime
+      href: concept-onnx.md
     - name: Machine Learning-pijplijnen
       href: concept-ml-pipelines.md
     - name: Beveiliging
@@ -85,24 +123,40 @@
         - name: Ontwikkelaaromgevingen configureren
           displayName: 'local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB'
           href: how-to-configure-environment.md
-        - name: Visual Studio Code-extensie gebruiken
+        - name: Logboekregistratie inschakelen
+          displayName: 'troubleshoot, log, files, tracing'
+          href: how-to-enable-logging.md
+        - name: VS Code-extensie gebruiken
           displayName: 'Visual Studio Code, VSCode, tools, ai, vs'
           href: how-to-vscode-tools.md
     - name: Werken met gegevens
-      displayName: 'data prep, ETL, ELT, data preparation'
       items:
-        - name: Gegevens verkennen en voorbereiden
-          displayName: 'data prep, ETL, ELT, data preparation'
+        - name: Gegevenssets toevoegen & registreren
+          displayName: 'data, dataset'
+          href: how-to-create-register-datasets.md
+        - name: Voorbereiden met azureml.dataprep
           items:
             - name: Gegevens laden
+              displayName: 'data, etl, data prep, dataprep'
               href: how-to-load-data.md
             - name: Gegevens transformeren
+              displayName: 'data, etl, dataprep, data prep'
               href: how-to-transform-data.md
             - name: Gegevens schrijven
+              displayName: 'data, etl, data prep, dataprep'
               href: how-to-write-data.md
-    - name: Gegevens ophalen in het gegevensarchief
-      displayName: blob get fileshare access storage
-      href: how-to-access-data.md
+        - name: Voorbereiden met gegevenssets (preview)
+          displayName: 'data, etl, dataset, summary statistics, profile, explore, data preparation, dataprep'
+          href: how-to-explore-prepare-data.md
+        - name: Versie & gegevensdefinities beheren
+          displayName: 'data, etl, dataset, data preparation, dataprep, version'
+          href: how-to-manage-dataset-definitions.md
+        - name: Momentopname van gegevens maken
+          displayName: 'snapshots, profile, summary statistics, data copy'
+          href: how-to-create-dataset-snapshots.md
+        - name: Gegevens uit gegevensarchief ophalen
+          displayName: blob get fileshare access storage
+          href: how-to-access-data.md
     - name: Modellen trainen
       items:
         - name: Een trainingsomgeving instellen
@@ -130,21 +184,24 @@
         - name: Automatische ML gebruiken (Python)
           displayName: SDK automl
           href: how-to-configure-auto-train.md
+        - name: Automatische ML gebruiken (Azure-portal)
+          href: how-to-create-portal-experiments.md
         - name: Externe compute-doelen gebruiken
           displayName: automl automated auto ml
           href: how-to-auto-train-remote.md
         - name: Automatisch een prognosemodel trainen
           displayName: time series
           href: how-to-auto-train-forecast.md
-    - name: ONNX-modellen
-      href: how-to-build-deploy-onnx.md
-    - name: Modellen implementeren
+    - name: Modellen implementeren & bedienen
       items:
         - name: Waar en hoe u implementeert
           displayName: publish azure kubernetes azure container instances
           href: how-to-deploy-and-where.md
         - name: FPGAs
           href: how-to-deploy-fpga-web-service.md
+        - name: IoT Edge
+          href: ../../iot-edge/tutorial-deploy-machine-learning.md
+          maintainContext: true
         - name: Problemen oplossen
           href: how-to-troubleshoot-deployment.md
     - name: Webservices gebruiken
@@ -162,31 +219,118 @@
           href: how-to-enable-data-collection.md
         - name: Controleren met behulp van Application Insights
           href: how-to-enable-app-insights.md
-    - name: Uw eerste pijplijn maken
-      href: how-to-create-your-first-pipeline.md
-    - name: Logboekregistratie inschakelen
-      displayName: logging
-      href: how-to-enable-logging.md
+    - name: Herbruikbare werkstromen maken
+      displayName: pipelines
+      items:
+        - name: ML-pijplijn maken
+          href: how-to-create-your-first-pipeline.md
     - name: Resourcequota beheren
       displayName: limits
       href: how-to-manage-quotas.md
-    - name: De Machine Learning-CLI gebruiken
-      displayName: cli extension command line command-line az ci/cd automate automated
-      href: reference-azure-machine-learning-cli.md
     - name: Gegevens exporteren en verwijderen
       displayName: GDPR
       href: how-to-export-delete-data.md
 - name: Naslaginformatie
   items:
     - name: Machine learning-SDK
-      displayName: api core package python
+      displayName: api core package python data prep
       href: 'https://aka.ms/aml-sdk'
     - name: Data prep-SDK
-      displayName: api preparation package python
+      displayName: api core package python data prep
       href: 'https://aka.ms/data-prep-sdk'
     - name: Monitoring-SDK
       displayName: api package python monitor
       href: 'https://aka.ms/aml-monitoring-sdk'
+    - name: Machine learning-CLI
+      displayName: 'cli, extension, command line, command-line, az, ci/cd, automate, automated'
+      href: reference-azure-machine-learning-cli.md
+    - name: Visuele-interfacemodules
+      displayName: module reference
+      items:
+        - name: Overzicht moduleverwijzingen
+          href: ../algorithm-module-reference/module-reference.md
+        - name: Conversies gegevensindeling
+          items:
+            - name: Converteren naar CSV
+              href: ../algorithm-module-reference/convert-to-csv.md
+        - name: Gegevensinvoer & -uitvoer
+          items:
+            - name: Gegevens importeren
+              href: ../algorithm-module-reference/import-data.md
+            - name: Gegevens exporteren
+              href: ../algorithm-module-reference/export-data.md
+            - name: Gegevens handmatig invoeren
+              href: ../algorithm-module-reference/enter-data-manually.md
+        - name: Gegevenstransformaties
+          items:
+            - name: Kolommen in gegevensset selecteren
+              href: ../algorithm-module-reference/select-columns-in-dataset.md
+            - name: Metagegevens bewerken
+              href: ../algorithm-module-reference/edit-metadata.md
+            - name: Ontbrekende gegevens opschonen
+              href: ../algorithm-module-reference/clean-missing-data.md
+            - name: Kolommen toevoegen
+              href: ../algorithm-module-reference/add-columns.md
+            - name: Rijen toevoegen
+              href: ../algorithm-module-reference/add-rows.md
+            - name: Dubbele rijen verwijderen
+              href: ../algorithm-module-reference/remove-duplicate-rows.md
+            - name: Gegevens splitsen
+              href: ../algorithm-module-reference/split-data.md
+            - name: Gegevens normaliseren
+              href: ../algorithm-module-reference/normalize-data.md
+            - name: Partitie en voorbeeld
+              href: ../algorithm-module-reference/partition-and-sample.md
+        - name: Machine learning
+          items:
+            - name: Score Model
+              href: ../algorithm-module-reference/score-model.md
+            - name: Gegevens aan cluster toewijzen
+              href: ../algorithm-module-reference/assign-data-to-clusters.md
+            - name: Model trainen
+              href: ../algorithm-module-reference/train-model.md
+            - name: Clustermodel trainen
+              href: ../algorithm-module-reference/train-clustering-model.md
+            - name: Model evalueren
+              href: ../algorithm-module-reference/evaluate-model.md
+            - name: Transformatie toepassen
+              href: ../algorithm-module-reference/apply-transformation.md
+            - name: Lineaire regressie
+              href: ../algorithm-module-reference/linear-regression.md
+            - name: Regressie neuraal netwerk
+              href: ../algorithm-module-reference/neural-network-regression.md
+            - name: Regressie beslissingsforest
+              href: ../algorithm-module-reference/decision-forest-regression.md
+            - name: Regressie versterkte beslissingsstructuur
+              href: ../algorithm-module-reference/boosted-decision-tree-regression.md
+            - name: Versterkte beslissingsstructuur met twee klassen
+              href: ../algorithm-module-reference/two-class-boosted-decision-tree.md
+            - name: Logistieke regressie met twee klassen
+              href: ../algorithm-module-reference/two-class-logistic-regression.md
+            - name: Logistieke regressie met meerdere klassen
+              href: ../algorithm-module-reference/multiclass-logistic-regression.md
+            - name: Neuraal netwerk met meerdere klassen
+              href: ../algorithm-module-reference/multiclass-neural-network.md
+            - name: Beslissingsforest met meerdere klassen
+              href: ../algorithm-module-reference/multiclass-decision-forest.md
+            - name: Gemiddeld perceptron met twee klassen
+              href: ../algorithm-module-reference/two-class-averaged-perceptron.md
+            - name: Beslissingsforest met twee klassen
+              href: ../algorithm-module-reference/two-class-decision-forest.md
+            - name: Neuraal netwerk met twee klassen
+              href: ../algorithm-module-reference/two-class-neural-network.md
+            - name: Two-Class Support Vector Machine
+              href: ../algorithm-module-reference/two-class-support-vector-machine.md
+            - name: K-means-clustering
+              href: ../algorithm-module-reference/k-means-clustering.md
+        - name: Python-taalmodules
+          items:
+            - name: Python-script uitvoeren
+              href: ../algorithm-module-reference/execute-python-script.md
+            - name: Python-model maken
+              href: ../algorithm-module-reference/create-python-model.md
+        - name: Foutberichten & -codes
+          href: ../algorithm-module-reference/machine-learning-module-error-codes.md
 - name: Resources
   items:
     - name: Releaseopmerkingen
