--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -15,6 +15,9 @@
     - name: Spraakomzetting
       href: speech-translation.md
       displayName: 'translate speech, speech translation, translator, s2s, speech to speech'
+    - name: Voice-first virtuele assistenten (preview)
+      href: voice-first-virtual-assistants.md
+      displayName: 'virtual assistants, speech-enabled bots, conversational agents'
 - name: Snelstartgidsen
   items:
     - name: Speech-SDK
@@ -73,7 +76,7 @@
               displayName: 'recognize speech, speech recognition, speech-to-text, stt, C#, universal windows platform'
             - name: C++ (Windows)
               href: quickstart-translate-speech-cpp-windows.md
-            - name: 'Java (Windows, Linux)'
+            - name: 'Java (Windows, macOS, Linux)'
               href: quickstart-translate-speech-java-jre.md
         - name: Tekst naar spraak
           items:
@@ -86,6 +89,14 @@
             - name: C++ (Linux)
               href: quickstart-text-to-speech-cpp-linux.md
               displayName: 'synthesize speech, speech synthesis, text-to-speech, tts'
+        - name: Voice-first virtuele assistenten (preview)
+          items:
+            - name: 'C# (UWP)'
+              href: quickstart-virtual-assistant-csharp-uwp.md
+              displayName: 'virtual assistant, speech-enabled bot, conversational agent'
+            - name: 'Java (Windows, macOS, Linux)'
+              href: quickstart-virtual-assistant-java-jre.md
+              displayName: 'virtual assistant, speech-enabled bot, conversational agent'
     - name: REST-API’s
       items:
         - name: Lijst met ondersteunde stemmen per regio
@@ -103,7 +114,7 @@
             - name: Python
               href: quickstart-python-text-to-speech.md
     - name: Speech Devices SDK
-      href: speech-devices-sdk-qsg.md
+      href: speech-devices-sdk-android-quickstart.md
       displayName: 'roobo, speech devices sdk'
 - name: Zelfstudies
   items:
@@ -113,6 +124,12 @@
     - name: 'Een Flask-app bouwen om tekst om te zetten en samen te stellen, REST'
       maintainContext: true
       href: ../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json
+- name: Concepten
+  items:
+    - name: Gesprekstranscriptie-service
+      href: conversation-transcription-service.md
+    - name: Callcentertranscriptie
+      href: call-center-transcription.md
 - name: Handleidingen
   items:
     - name: Registreren voor Speech Services
@@ -131,26 +148,38 @@
     - name: Logboekregistratie inschakelen (SDK)
       href: how-to-use-logging.md
       displayName: 'debug, log, logging'
+    - name: Herkenning verbeteren met woordgroepenlijsten
+      href: how-to-phrase-lists.md
+      displayname: 'phrase lists, phrase, list, recognition accuracy'
+    - name: Gesprekken transcriberen (SDK)
+      href: how-to-use-conversation-transcription-service.md
+      displayName: 'conversation, transcription, speech recognition'
     - name: Aanpassing
       items:
         - name: Spraak naar tekst
           items:
-            - name: Transcripten voorbereiden voor aanpassing
-              href: prepare-transcription.md
-            - name: Akoestische modellen aanpassen
-              href: how-to-customize-acoustic-models.md
-            - name: Taalmodellen aanpassen
-              href: how-to-customize-language-model.md
-            - name: Uitspraak aanapssen
-              href: how-to-customize-pronunciation.md
-            - name: Aangepaste eindpunten voor herkenning maken
-              href: how-to-create-custom-endpoint.md
+            - name: Aan de slag met Custom Speech
+              href: how-to-custom-speech.md
+            - name: Gegevens voorbereiden
+              href: how-to-custom-speech-test-data.md
+            - name: Gegevens inspecteren
+              href: how-to-custom-speech-inspect-data.md
+            - name: Nauwkeurigheid evalueren
+              href: how-to-custom-speech-evaluate-data.md
+            - name: Aangepast model trainen
+              href: how-to-custom-speech-train-model.md
+            - name: Aangepaste model implementeren
+              href: how-to-custom-speech-deploy-model.md
+            - name: 'Handleiding: door mensen gelabelde transcripties maken'
+              href: how-to-custom-speech-human-labeled-transcriptions.md
         - name: Tekst naar spraak
           items:
             - name: Spraakstijlen maken (Bot Brand Voice)
               href: how-to-customize-voice-font.md
             - name: Spraakvoorbeelden opnemen
               href: record-custom-voice-samples.md
+            - name: Uitvoer tekst-naar-spraak afstellen
+              href: how-to-voice-tuning.md
         - name: Een aangepast activeringswoord maken (Devices-SDK)
           href: speech-devices-sdk-create-kws.md
           displayName: 'roobo, speech devices sdk, wake word, keyword spotting, kws'
@@ -162,6 +191,14 @@
           href: how-to-migrate-from-custom-speech-service.md
         - name: Vanuit de Translator Speech-API
           href: how-to-migrate-from-translator-speech-api.md
+    - name: Containers gebruiken
+      items:
+        - name: Containers installeren en uitvoeren
+          displayName: 'docker, container, package, packaged app, swagger, open api, openapi, train, publish, az, acr, cli, tps, core, curl, try it now, import, pull'
+          href: speech-container-howto.md
+        - name: Containers configureren
+          href: speech-container-configuration.md
+          displayName: 'docker, container, billing, apikey, pull, logging'
 - name: Voorbeelden
   items:
     - name: Speech-SDK
@@ -196,9 +233,13 @@
     - name: Speech Devices SDK
       items:
         - name: De Speech Devices SDK ophalen
-          href: 'get-speech-devices-sdk.md#download-the-speech-devices-sdk'
+          href: get-speech-devices-sdk.md
         - name: Releaseopmerkingen
           href: devices-sdk-release-notes.md
+        - name: Details Roobo v1
+          href: speech-devices-sdk-roobo-v1.md
+        - name: Microfoonspecificatie
+          href: speech-devices-sdk-microphone.md
     - name: REST-API’s
       items:
         - name: Spraak naar tekst
@@ -238,6 +279,8 @@
         - name: Spraakomzetting
           href: 'https://www.microsoft.com/translator/faq.aspx'
           displayName: 'translate speech, speech translation, translator, s2s, speech to speech'
+        - name: Voice-first virtuele assistenten (preview)
+          href: faq-voice-first-virtual-assistants.md
     - name: Speech-SDK-licenties
       displayName: 'C#, C++, Java, .NET, .NET Core, UWP, Android, Linux, Windows, NuGet, Maven, download, install, sample'
       items:
@@ -246,17 +289,18 @@
         - name: Mededelingen van derden
           href: 'https://aka.ms/csspeech/toctpn'
     - name: Speech Devices SDK
-      href: speech-devices-sdk.md
       displayName: 'roobo, speech devices sdk'
       items:
+        - name: Info
+          href: speech-devices-sdk.md
         - name: Licentie
           href: speech-devices-sdk-license.md
-          displayName: 'roobo, speech devices sdk'
         - name: Mededelingen van derden
           href: devices-sdk-third-party-notices.md
-          displayName: 'roobo, speech devices sdk'
     - name: Problemen met de Speech-SDK oplossen
       href: troubleshooting.md
+    - name: Probleem oplossen met de Speech Devices-SDK
+      href: speech-devices-sdk-troubleshooting.md
     - name: Ondersteuning
       href: support.md
     - name: Prijzen en beperkingen
