--- a/articles/machine-learning/service/index.yml
+++ b/articles/machine-learning/service/index.yml
@@ -11,7 +11,7 @@ metadata:
   manager: jhubbard
   author: j-martens
   ms.author: jmartens
-  ms.date: 2/19/2019
+  ms.date: 02/19/2019
   ms.custom: seodec18
   ms.tgt_pltfrm: na
   ms.devlang: na
@@ -55,8 +55,8 @@ sections:
         style: unordered
         items:
           - html: '<a href="https://aka.ms/aml-sdk">Centrale Python-SDK</a>: de belangrijkste functionaliteit, geautomatiseerde machine learning, pijplijnen en meer'
-          - html: '<a href="https://aka.ms/data-prep-sdk">Python SDK voor gegevensvoorbereiding</a>: uw gegevens voorbereiden en transformeren'
           - html: '<a href="https://aka.ms/aml-monitoring-sdk">Python SDK voor bewaking</a>: gegevens verzamelen over geïmplementeerde webservices'
+          - html: <a href="../algorithm-module-reference/module-reference.md">Algoritme- & moduleverwijzing</a> voor de visuele interface
   - title: Andere Azure Machine Learning-technologieën
     items:
       - type: list
