--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -4,8 +4,6 @@
   items:
     - name: Wat is Azure Search?
       href: search-what-is-azure-search.md
-    - name: Wat is cognitief zoeken?
-      href: cognitive-search-concept-intro.md
 - name: Snelstartgidsen
   expanded: true
   items:
@@ -15,7 +13,7 @@
       items:
         - name: Een index laden en er query's op uitvoeren
           href: search-get-started-portal.md
-        - name: Verrijken met AI (cognitief zoeken)
+        - name: Verrijken met AI (Cognitive Search)
           href: cognitive-search-quickstart-blob.md
     - name: 'C#'
       items:
@@ -35,8 +33,12 @@
       href: search-indexer-tutorial.md
     - name: Azure JSON-blobs indexeren
       href: search-semi-structured-data.md
-    - name: Indexeren met AI (Cognitive Services)
-      href: cognitive-search-tutorial-blob.md
+    - name: Verrijken met AI (Cognitive Search)
+      items:
+        - name: REST
+          href: cognitive-search-tutorial-blob.md
+        - name: 'C#'
+          href: cognitive-search-tutorial-blob-dotnet.md
 - name: Voorbeelden
   items:
     - name: Azure-codevoorbeelden
@@ -51,13 +53,17 @@
       href: 'https://www.pluralsight.com/courses/microsoft-azure-textual-content-search-enabling'
 - name: Concepten
   items:
-    - name: Zoeken in volledige tekst
+    - name: Zoekopdracht in volledige tekst
       href: search-lucene-query-architecture.md
-    - name: Patronen voor multitenancy ontwerpen
-      href: search-modeling-multitenant-saas-applications.md
+    - name: Cognitive Search
+      href: cognitive-search-concept-intro.md
+    - name: Knowledge Store
+      href: knowledge-store-concept-intro.md
+    - name: Projecties
+      href: knowledge-store-projection-overview.md
 - name: Handleidingen
   items:
-    - name: Capaciteitsplanning
+    - name: Planning
       items:
         - name: Een laag kiezen
           href: search-sku-tier.md
@@ -67,6 +73,8 @@
           href: search-capacity-planning.md
         - name: Implementatiestrategieën en best practices
           href: search-performance-optimization.md
+        - name: Multitenant-architectuur
+          href: search-modeling-multitenant-saas-applications.md
     - name: Beveiliging
       items:
         - name: Beveiligingsoverzicht
@@ -79,6 +87,8 @@
           href: search-security-trimming-for-azure-search.md
         - name: Filteren op AAD-identiteiten
           href: search-security-trimming-for-azure-search-with-aad.md
+        - name: Versleutelingssleutels beheren (preview)
+          href: search-security-manage-encryption-keys.md
     - name: Ontwikkeling
       items:
         - name: API-versies
@@ -169,26 +179,36 @@
           href: search-indexer-field-mappings.md
         - name: Algemene problemen oplossen
           href: search-indexer-troubleshooting.md
-    - name: AI-indexering (cognitief zoeken)
+    - name: Verrijken met AI
       items:
         - name: Een Cognitive Services-resource toevoegen
           href: cognitive-search-attach-cognitive-services.md
-        - name: Een set vaardigheden definiëren
-          href: cognitive-search-defining-skillset.md
-        - name: Naar een aantekening verwijzen
-          href: cognitive-search-concept-annotations-syntax.md
-        - name: Toewijzen aan indexvelden
-          href: cognitive-search-output-field-mapping.md
-        - name: Informatie uit installatiekopieën verwerken en extraheren
-          href: cognitive-search-concept-image-scenarios.md
-        - name: Aangepaste vaardigheden integreren
-          href: cognitive-search-custom-skill-interface.md
-        - name: Voorbeeld - aangepaste vaardigheden
-          href: cognitive-search-create-custom-skill-example.md
+        - name: Vaardighedensets
+          items:
+            - name: Een set vaardigheden definiëren
+              href: cognitive-search-defining-skillset.md
+            - name: Naar een aantekening verwijzen
+              href: cognitive-search-concept-annotations-syntax.md
+            - name: Toewijzen aan indexvelden
+              href: cognitive-search-output-field-mapping.md
+            - name: Informatie uit installatiekopieën verwerken en extraheren
+              href: cognitive-search-concept-image-scenarios.md
+        - name: Aangepaste vaardigheden
+          items:
+            - name: Aangepaste vaardigheden integreren
+              href: cognitive-search-custom-skill-interface.md
+            - name: Voorbeeld - Azure Functions
+              href: cognitive-search-create-custom-skill-example.md
+            - name: Voorbeeld - Containers
+              href: 'https://go.microsoft.com/fwlink/?linkid=2089500'
         - name: Tips voor probleemoplossing
           href: cognitive-search-concept-troubleshooting.md
         - name: Documentatielinks
           href: cognitive-search-resources-documentation.md
+    - name: Knowledge Store (preview)
+      items:
+        - name: Hoe gaat u aan de slag
+          href: knowledge-store-howto.md
     - name: Querygegevens
       items:
         - name: Een basisquery maken
@@ -203,6 +223,8 @@
           href: search-query-simple-examples.md
         - name: Voorbeelden (volledige Lucene)
           href: search-query-lucene-examples.md
+        - name: moreLikeThis (preview)
+          href: search-more-like-this.md
     - name: Gegevens filteren en sorteren
       items:
         - name: Filteroverzicht
@@ -276,9 +298,11 @@
           href: cognitive-search-skill-ocr.md
         - name: Shaper
           href: cognitive-search-skill-shaper.md
+        - name: Voorwaardelijk
+          href: cognitive-search-skill-conditional.md
         - name: Afgeschafte vaardigheden
           href: cognitive-search-skill-deprecated.md
-    - name: Aangepaste vaardigheden (preview)
+    - name: Aangepaste vaardigheden
       items:
         - name: Aangepaste Web-API
           href: cognitive-search-custom-skill-web-api.md
