--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -38,7 +38,7 @@ sections:
             image:
               src: /azure/cdn/media/index/cdn.svg
             title: CDN
-          - href: 'http://amp.azure.net/libs/amp/latest/docs/index.html'
+          - href: 'https://amp.azure.net/libs/amp/latest/docs/index.html'
             html: <p>Speel media-inhoud van Microsoft Azure Media Services af op een groot aantal browsers en apparaten.</p>
             image:
               src: /azure/media-services/latest/media/index/AMSIcons-Player.svg
