--- a/articles/azure-databricks/index.yml
+++ b/articles/azure-databricks/index.yml
@@ -8,7 +8,7 @@ metadata:
   author: mamccrea
   ms.service: azure-databricks
   ms.topic: landing-page
-  ms.date: 03/19/2018
+  ms.date: 05/07/2019
   ms.author: mamccrea
 abstract:
   description: 'Leer hoe u Azure Databricks gebruikt, een analyseplatform op basis van Apache Spark dat u met slechts één klik installeert, en dat beschikt over gestroomlijnde werkstromen en een interactieve werkruimte waarin datawetenschappers, data-engineers en bedrijfsanalisten kunnen samenwerken. Onze quickstarts en zelfstudies laten u zien hoe u aan de slag gaat met Azure Databricks en dit integreert met andere Azure-services.'
@@ -37,6 +37,10 @@ sections:
               src: /azure/azure-databricks/media/index/logo_azure_resource_manager.svg
             text: Resource Manager-sjabloon
             href: /azure/azure-databricks/quickstart-create-databricks-workspace-resource-manager-template
+          - image:
+              src: /azure/azure-databricks/media/index/virtualnetwork.svg
+            text: Virtueel netwerk
+            href: /azure/azure-databricks/quickstart-create-databricks-workspace-vnet-injection
   - title: Zelfstudies met stapsgewijze instructies
     items:
       - type: paragraph
@@ -44,6 +48,8 @@ sections:
       - type: list
         style: ordered
         items:
+          - html: <a href="/azure/azure-databricks/vnet-injection-sql-server">Query's uitvoeren op SQL Server in een Docker-container</a>
+          - html: <a href="/azure/azure-databricks/service-endpoint-cosmosdb">Een Cosmos DB-service-eindpunt gebruiken</a>
           - html: '<a href="/azure/azure-databricks/databricks-extract-load-sql-data-warehouse">Gegevens uitpakken, transformeren en laden</a>'
           - html: <a href="/azure/azure-databricks/databricks-stream-from-eventhubs">Gegevens streamen vanuit Event Hubs</a>
           - html: <a href="/azure/azure-databricks/databricks-sentiment-analysis-cognitive-services">Sentimentanalyse met Cognitive Services</a>
@@ -56,3 +62,5 @@ sections:
         items:
           - title: REST
             html: <p><a href="/rest/api/databricks">REST API</a></p>
+          - title: Resource Manager
+            html: <p><a href="/azure/templates/microsoft.databricks/workspaces">Sjabloon</a></p>
