commit translated contents

--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -4,23 +4,35 @@
   items:
     - name: Over Azure App Configuration
       href: overview.md
+    - name: Veelgestelde vragen
+      href: faq.md
 - name: Snelstartgidsen
   expanded: true
   items:
-    - name: Een ASP.NET Core-app maken
-      href: quickstart-aspnet-core-app.md
-    - name: Een .NET Core-app maken
-      href: quickstart-dotnet-core-app.md
-    - name: Een .NET Framework-app maken
-      href: quickstart-dotnet-app.md
-    - name: Een Azure-functie maken
-      href: quickstart-azure-function-csharp.md
-    - name: Een Java Spring-app maken
-      href: quickstart-java-spring-app.md
+    - name: Configuratie
+      items:
+        - name: ASP.NET Core
+          href: quickstart-aspnet-core-app.md
+        - name: .NET Core
+          href: quickstart-dotnet-core-app.md
+        - name: .NET Framework
+          href: quickstart-dotnet-app.md
+        - name: Azure Functions in .NET Core
+          href: quickstart-azure-function-csharp.md
+        - name: Java Spring
+          href: quickstart-java-spring-app.md
+    - name: Functiebeheer
+      items:
+        - name: ASP.NET Core
+          href: quickstart-feature-flag-aspnet-core.md
 - name: Zelfstudies
   items:
     - name: Dynamische configuratie in ASP.NET Core inschakelen
       href: enable-dynamic-configuration-aspnet-core.md
+    - name: Functievlaggen gebruiken in een .NET Core-app
+      href: use-feature-flags-dotnet-core.md
+    - name: Functievlaggen beheren
+      href: manage-feature-flags.md
     - name: Integreren met een CI/CD-pijplijn
       href: integrate-ci-cd-pipeline.md
 - name: Voorbeelden
@@ -31,26 +43,38 @@
   items:
     - name: Sleutel-waardearchief
       href: concept-key-value.md
-    - name: Momentopname van een bepaald tijdstip
+    - name: Point-in-time-snapshot
       href: concept-point-time-snapshot.md
+    - name: Functiebeheer
+      href: concept-feature-management.md
 - name: Handleidingen
   items:
     - name: Integreren met Azure Managed Service Identity
       href: howto-integrate-azure-managed-service-identity.md
     - name: Configuratiegegevens importeren of exporteren
       href: howto-import-export-data.md
+    - name: Aanbevolen procedures
+      href: howto-best-practices.md
 - name: Naslaginformatie
   items:
-    - name: .NET Core-configuratieprovider
-      href: 'https://go.microsoft.com/fwlink/?linkid=2074664'
-    - name: .NET Framework-configuratie maken
-      href: 'https://go.microsoft.com/fwlink/?linkid=2074663'
-    - name: Java Spring-configuratieprovider
-      href: 'https://github.com/Microsoft/spring-cloud-azure/tree/azure-config/spring-cloud-azure-starters/spring-cloud-starter-azure-config'
-    - name: .NET Azure SDK
-      href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/src/SDKs/Azure.ApplicationModel.Configuration/data-plane'
-    - name: REST
-      href: 'https://go.microsoft.com/fwlink/?linkid=2078296'
+    - name: Configuratie
+      items:
+        - name: .NET Core-configuratieprovider
+          href: 'https://go.microsoft.com/fwlink/?linkid=2074664'
+        - name: .NET Framework-configuratie maken
+          href: 'https://go.microsoft.com/fwlink/?linkid=2074663'
+        - name: Java Spring-configuratieprovider
+          href: 'https://github.com/Microsoft/spring-cloud-azure/tree/azure-config/spring-cloud-azure-starters/spring-cloud-starter-azure-config'
+        - name: .NET Azure SDK
+          href: 'https://github.com/Azure/azure-sdk-for-net/tree/master/src/SDKs/Azure.ApplicationModel.Configuration/data-plane'
+        - name: REST
+          href: 'https://go.microsoft.com/fwlink/?linkid=2078296'
+    - name: Functiebeheer
+      items:
+        - name: .NET Core-bibliotheek
+          href: 'https://go.microsoft.com/fwlink/?linkid=2091700'
+        - name: ASP.NET Core-bibliotheek
+          href: 'https://go.microsoft.com/fwlink/?linkid=2091410'
 - name: Resources
   items:
     - name: Aan de slag-video
