--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -97,6 +97,8 @@
       href: service-fabric-best-practices-infrastructure-as-code.md
     - name: Controle en diagnose
       href: service-fabric-best-practices-monitoring.md
+    - name: Toepassingsontwerp
+      href: service-fabric-best-practices-applications.md
     - name: Controlelijst voor productiegereedheid
       href: service-fabric-production-readiness-checklist.md
 - name: Voorbeelden
@@ -609,6 +611,8 @@
                   href: service-fabric-cluster-azure-deployment-preparation.md
                 - name: Maken in Azure-portal
                   href: service-fabric-cluster-creation-via-portal.md
+                - name: Een Azure Service Fabric-cluster implementeren in meerdere beschikbaarheidszones
+                  href: service-fabric-cross-availability-zones.md
                 - name: Verificatie via Azure Active Directory instellen
                   href: service-fabric-cluster-creation-setup-aad.md
                 - name: Een aangepaste clustersjabloon maken
