--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -13,9 +13,6 @@
           href: storage-blobs-introduction.md
     - name: Snelstartgidsen
       items:
-        - name: Create a storage account
-          displayName: 'resource manager, resource manager template, template, ARM'
-          href: ../common/storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Blobs zonder code beheren
           items:
             - name: Azure Portal
@@ -280,8 +277,11 @@
           href: storage-blob-pageblob-overview.md
     - name: Procedures
       items:
-        - name: Opslagaccounts beheren
+        - name: Opslagaccounts maken en beheren
           items:
+            - name: Een opslagaccount voor algemeen gebruik maken
+              displayName: 'resource manager, resource manager template, template, ARM'
+              href: ../common/storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Een blok-blob-opslagaccount maken
               href: storage-blob-create-account-block-blob.md
             - name: Een opslagaccount beheren
@@ -413,7 +413,7 @@
             - name: 'Blobs, wachtrijen, tabellen en bestanden'
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/client'
             - name: Gegevensverplaatsing
-              href: 'https://docs.microsoft.com/dotnet/api/microsoft.windowsazure.storage.datamovement'
+              href: 'https://docs.microsoft.com/dotnet/api/microsoft.azure.storage.datamovement'
             - name: Resource Manager
               href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/management'
         - name: Java
@@ -488,7 +488,7 @@
                 - name: 'Blobs, wachtrijen, tabellen en bestanden'
                   href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/client'
                 - name: Gegevensverplaatsing
-                  href: 'https://docs.microsoft.com/dotnet/api/microsoft.windowsazure.storage.datamovement'
+                  href: 'https://docs.microsoft.com/dotnet/api/microsoft.azure.storage.datamovement'
                 - name: Resource Manager
                   href: 'https://docs.microsoft.com/dotnet/api/overview/azure/storage/management'
             - name: Java
@@ -563,6 +563,8 @@
               href: ../common/storage-security-guide.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: Toegangsbeheer
               href: data-lake-storage-access-control.md
+        - name: Gebeurtenisverwerking
+          href: storage-blob-event-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Procedures
       items:
         - name: Gegevens opnemen
